--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "express": "^4.16.4",
     "graphql": "^0.13.1",
     "json-server": "^0.14.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^1.18.5",
+    "npm-run-all": "^4.1.3"
   }
 }
