--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "babel-node": "babel-node",
-    "dev:api": "nodemon --exec npm run babel-node index.js"
+    "dev:api": "nodemon --exec npm run babel-node index.js",
+    "dev:json": "json-server --watch db.json"
   },
   "dependencies": {
     "apollo-server-express": "^2.1.0",
